--- a/phoneSearch.html
+++ b/phoneSearch.html
@@ -16,6 +16,11 @@
             <input id="search-field" type="text" class="form-control" placeholder="Search Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
         </div>
+
+        <!-- search result showing part -->
+        <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
+            
+        </div>
     </main>
     <script src="./js/phoneSearch.js"></script>
 </body>
