without bonus part, all completed

--- a/phoneSearch.html
+++ b/phoneSearch.html
@@ -17,9 +17,14 @@
             <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
         </div>
 
+        <!-- singel phone details -->
+        <div id="singel-result" class="w-25 mx-auto">
+
+        </div>
+
         <!-- search result showing part -->
         <div id="search-result" class="row row-cols-1 row-cols-md-3 g-4">
-            
+
         </div>
     </main>
     <script src="./js/phoneSearch.js"></script>
