--- a/phoneSearch.html
+++ b/phoneSearch.html
@@ -16,6 +16,10 @@
             <input id="search-field" type="text" class="form-control" placeholder="Search Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button onclick="searchPhone()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
         </div>
+        <!-- error msg -->
+        <div id="error">
+            
+        </div>
 
         <!-- singel phone details -->
         <div id="singel-result" class="w-25 mx-auto">
