--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
 
         </div>
     </main>
-    <script src="./js/phoneSearch.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 </html>
