all done with bug fixing

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- singel phone details -->
-        <div id="singel-result" class="w-25 mx-auto">
+        <div id="singel-result" class="border-o shadow w-25 mx-auto">
 
         </div>
 
