--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
 
         <!-- singel phone details -->
-        <div id="singel-result" class="border-o shadow w-25 mx-auto">
+        <div id="singel-result" class="row row-cols-1 border-o shadow w-50 mx-auto">
 
         </div>
 
